# simuBoss

./: .dockerignore  .env  .env.example  .env.production.example  .gitignore  Dockerfile  README.md  docker-compose.yml  index.html  package-lock.json  package.json  vite.config.js  项目架构.md
.github/workflows/: deploy-ecs.yml
backend/: .env.example  README.md  pyproject.toml
backend/app/: __init__.py  config.py  db.py  main.py  models.py
backend/app/api/: dependencies.py  routes_auth.py  routes_health.py  routes_runtime.py  routes_workspace.py
backend/app/graphs/: task_graph.py
backend/app/schemas/: __init__.py  auth.py  runtime.py  workspace.py
backend/app/services/: document_parser.py  graph_runner.py  json_utils.py  llm_client.py  ppt_renderer.py  security.py  session_store.py
backend/simuboss_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
deploy/: nginx.conf
ppt/: app.py  content.json
scripts/: bootstrap-ecs.sh  deploy-ecs.sh
src/: App.vue  styles.css
src/components/canvas/: HierarchyBranch.vue  PlacementNode.vue
src/components/common/: AvatarBadge.vue  MessageToaster.vue
src/config/: avatarLibrary.js  prompts.js
src/router/: index.js
src/runtime/: scheduler.js
src/services/: api.js  backendRuntime.js  llm.js  workspace.js
src/stores/: assetLibrary.js  auth.js  messages.js  runtime.js  simuBoss.js
src/utils/: id.js  placementBounds.js  tree.js
src/views/: AssetLibraryView.vue  BossView.vue  BuildingView.vue  EmployeeStudioView.vue  LoginView.vue  MarketView.vue  RecruitView.vue  TeamStudioPage.vue
(+20 files in other folders)
